--- a/app/src/main/res/layout/activity_all_apotiment.xml
+++ b/app/src/main/res/layout/activity_all_apotiment.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:background="#F1EEEE"
         android:layout_height="match_parent"
         tools:context=".view.activity.AllApotimentActivity">
     <androidx.cardview.widget.CardView
@@ -80,5 +81,6 @@
     <ProgressBar android:layout_width="wrap_content"
                  android:layout_centerInParent="true"
                  android:id="@+id/progressbar"
+        android:visibility="gone"
                  android:layout_height="wrap_content"/>
 </RelativeLayout>
