--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:background="#F1EEEE"
         android:layout_height="match_parent"
         tools:context=".view.activity.HomeActivity">
     <androidx.cardview.widget.CardView
@@ -45,7 +46,7 @@
 
     </LinearLayout>
     <RelativeLayout
-            android:layout_width="40dp"
+            android:layout_width="100dp"
             android:id="@+id/carlayout"
             android:layout_gravity="end"
             android:layout_marginEnd="10dp"
@@ -53,14 +54,33 @@
             android:layout_height="wrap_content" android:layout_marginRight="10dp">
 
 
-        <ImageView
-                android:id="@+id/cart"
-                android:layout_width="35dp"
-                android:layout_centerVertical="true"
-                android:layout_height="35dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:padding="6dp"
-                app:srcCompat="@drawable/wallet19" tools:ignore="VectorDrawableCompat"/>
+        <LinearLayout
+            android:layout_width="80dp"
+            android:background="@drawable/border"
+            android:id="@+id/walletlayout"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_alignParentEnd="true"
+            android:layout_height="25dp">
+            <ImageView
+                android:layout_width="30dp"
+                android:id="@+id/wallet"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:src="@drawable/ic_account_balance_wallet_black_24dp"
+                android:layout_marginEnd="10dp"
+                android:layout_height="25dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:id="@+id/walletamounttxt"
+                android:text="Rs.00"
+                android:textSize="11dp"
+                android:layout_marginEnd="2dp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
         <RelativeLayout
                 android:layout_width="20dp"
                 android:visibility="gone"
@@ -85,22 +105,23 @@
             android:background="#25016A"
             android:layout_below="@id/toolbar"
             android:layout_height="wrap_content">
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="26dp"
                 android:id="@+id/image"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_baseline_my_location_24"
+                android:src="@drawable/location1"
                 android:layout_height="26dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="10dp">
 
-        </ImageView>
+        </de.hdodenhof.circleimageview.CircleImageView>
         <TextView
                 android:layout_width="wrap_content"
                 android:text="Location"
                 android:textColor="#ffff"
+                android:singleLine="true  "
                 android:id="@+id/text_location"
                 android:layout_toRightOf="@id/image"
                 android:layout_marginStart="10dp"
@@ -127,38 +148,37 @@
                   android:layout_below="@id/toolbar"
                   android:layout_height="wrap_content">
 
-            <com.smarteist.autoimageslider.SliderView
-                    android:id="@+id/imageSlider"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:visibility="gone"
-                    app:sliderAnimationDuration="600"
-                    app:sliderAutoCycleDirection="back_and_forth"
-                    app:sliderAutoCycleEnabled="true"
-                    app:sliderCircularHandlerEnabled="true"
-                    app:sliderIndicatorAnimationDuration="600"
-                    app:sliderIndicatorGravity="center_horizontal|bottom"
-                    app:sliderIndicatorOrientation="horizontal"
-                    app:sliderIndicatorPadding="3dp"
-                    app:sliderIndicatorRadius="2dp"
-                    app:sliderIndicatorSelectedColor="#5A5A5A"
-                    app:sliderIndicatorUnselectedColor="#FFF"
-                    app:sliderScrollTimeInSec="1"
-                    app:sliderStartAutoCycle="true" />
-        <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="200dp">
-              <ImageView
-                      android:layout_width="match_parent"
-                      android:background="@drawable/banner"
-                      android:layout_height="match_parent">
 
-              </ImageView>
-        </androidx.cardview.widget.CardView>
+        <com.smarteist.autoimageslider.SliderView
+            android:id="@+id/imageSlider"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            app:sliderAnimationDuration="600"
+            app:sliderAutoCycleDirection="back_and_forth"
+            app:sliderAutoCycleEnabled="true"
+            app:sliderCircularHandlerEnabled="true"
+            app:sliderIndicatorAnimationDuration="600"
+            app:sliderIndicatorGravity="center_horizontal|bottom"
+            app:sliderIndicatorOrientation="horizontal"
+            app:sliderIndicatorPadding="3dp"
+            app:sliderIndicatorRadius="2dp"
+            app:sliderIndicatorSelectedColor="#5A5A5A"
+            app:sliderIndicatorUnselectedColor="#FFF"
+            app:sliderScrollTimeInSec="1"
+            app:sliderStartAutoCycle="true" />
+        <ImageView
+            android:layout_width="50dp"
+            android:src="@drawable/filter"
+            android:layout_gravity="end"
+            android:visibility="gone"
+            android:layout_marginEnd="10dp"
+            android:layout_height="50dp">
+
+        </ImageView>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
+
                 android:id="@+id/recyclerview"
                 android:layout_height="wrap_content">
 
@@ -217,9 +237,11 @@
     </androidx.core.widget.NestedScrollView>
 
 
+
  <ProgressBar android:layout_width="wrap_content"
               android:layout_centerInParent="true"
               android:id="@+id/progressbar"
+              android:visibility="gone"
               android:layout_height="wrap_content"/>
 
 
