--- a/app/src/main/res/layout/activity_my_wallet_.xml
+++ b/app/src/main/res/layout/activity_my_wallet_.xml
@@ -39,7 +39,7 @@
                     android:textSize="18dp"
                     android:fontFamily="@font/maven_pro"
                     android:textStyle="bold"
-                    android:text="Wallet"
+                    android:text="My Subscription"
                     android:singleLine="true"
                     android:ellipsize="end"
                     android:layout_marginStart="16dp"
@@ -59,10 +59,12 @@
     <ScrollView
             android:layout_width="match_parent"
             android:layout_below="@id/toolbar"
+        android:id="@+id/layout001"
             android:layout_height="wrap_content">
 
         <RelativeLayout
                 android:layout_width="match_parent"
+
                 android:layout_height="wrap_content">
 
         <RelativeLayout
@@ -157,5 +159,87 @@
     </RelativeLayout>
     </RelativeLayout>
     </ScrollView>
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/custom_toast_layout"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        app:cardBackgroundColor="#F3F3F3"
+        android:layout_margin="14dp"
+         android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        app:cardCornerRadius="14dp"
+        android:paddingRight="10dp"
+        android:background="@color/transparent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+
+            <ImageView android:layout_width="70dp"
+                android:id="@+id/imageview"
+                android:src="@drawable/emptywallet"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="10dp"
+                android:layout_height="70dp"
+                android:layout_marginRight="10dp" />
+            <TextView android:id="@+id/txtvw"
+                android:layout_width="wrap_content"
+                android:layout_below="@id/imageview"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="#7A7979"
+                android:layout_centerHorizontal="true"
+                android:text=""
+                android:fontFamily="@font/maven_pro_medium"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="5dp"
+                android:textStyle="bold"
+                android:textSize="18dp" />
+            <TextView android:id="@+id/txtvw2"
+                android:layout_width="wrap_content"
+                android:layout_below="@id/txtvw"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="#7A7979"
+                android:layout_centerHorizontal="true"
+                android:text="You have no Subscription Plan!! "
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="5dp"
+                android:textStyle="bold"
+                android:textSize="15dp" />
+            <Button
+                android:layout_width="wrap_content"
+                android:id="@+id/add_money_wallet_"
+                android:layout_below="@id/txtvw2"
+                android:layout_centerHorizontal="true"
+                android:text="Buy plan"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="10dp"
+                android:textSize="12dp"
+                android:textColor="#fff"
+                android:fontFamily="@font/maven_pro_medium"
+                android:background="@drawable/add_wallet_background"
+                android:layout_height="30dp">
+
+            </Button>
+
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/progress"
+        android:visibility="gone"
+        android:layout_height="wrap_content">
+
+    </ProgressBar>
 
 </RelativeLayout>
