--- a/app/src/main/res/layout/activity_sinup.xml
+++ b/app/src/main/res/layout/activity_sinup.xml
@@ -7,12 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".view.activity.LoginActivity">
     <ImageView
-            android:layout_width="200sp"
+            android:layout_width="300sp"
             android:id="@+id/img_logo"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="100sp"
             android:src="@drawable/tkl_logo"
-            android:layout_height="100dp"/>
+            android:layout_height="120dp"/>
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -29,12 +29,12 @@
                     android:id="@+id/username_et"
                     android:layout_marginStart="30sp"
                     android:layout_marginEnd="30sp"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="#ECEBEB"
                     android:drawableStart="@drawable/user7"
                     android:drawablePadding="9sp"
                     android:fontFamily="@font/quicksand_bold"
-                    android:backgroundTint="@color/white"
-                    android:textColor="@color/white"
+                    android:backgroundTint="#ECEBEB"
+                    android:textColor="#ECEBEB"
                     android:layout_height="wrap_content" tools:ignore="HardcodedText,UnusedAttribute"
                     android:drawableLeft="@drawable/user_img"/>
 
@@ -48,12 +48,12 @@
                     android:layout_marginStart="30sp"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="30sp"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="#ECEBEB"
                     android:drawableStart="@drawable/emailregister"
                     android:drawablePadding="9sp"
                     android:fontFamily="@font/quicksand_bold"
-                    android:backgroundTint="@color/white"
-                    android:textColor="@color/white"
+                    android:backgroundTint="#ECEBEB"
+                    android:textColor="#ECEBEB"
                     android:layout_height="wrap_content" tools:ignore="HardcodedText,UnusedAttribute"
                     android:drawableLeft="@drawable/user_img"/>
 
@@ -67,12 +67,12 @@
                     android:inputType="number"
                     android:textSize="15sp"
                     android:id="@+id/phone_et"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="#ECEBEB"
                     android:drawableStart="@drawable/call_register"
                     android:drawablePadding="9sp"
                     android:fontFamily="@font/quicksand_bold"
-                    android:backgroundTint="@color/white"
-                    android:textColor="@color/white"
+                    android:backgroundTint="#ECEBEB"
+                    android:textColor="#ECEBEB"
                     android:layout_height="wrap_content" tools:ignore="HardcodedText,UnusedAttribute"
                     android:drawableLeft="@drawable/user_img"/>
 
@@ -84,14 +84,14 @@
                     android:layout_marginTop="15dp"
                     android:inputType="textPassword"
                     android:id="@+id/password_et"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="#ECEBEB"
                     android:drawableStart="@drawable/password8"
                     android:drawablePadding="9sp"
                     android:fontFamily="@font/quicksand_bold"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="#ECEBEB"
                     android:layout_marginStart="30sp"
                     android:layout_marginEnd="30sp"
-                    android:textColor="@color/white"
+                    android:textColor="#ECEBEB"
                     android:layout_height="wrap_content" tools:ignore="HardcodedText,UnusedAttribute"
                     android:drawableLeft="@drawable/user_img"/>
 
@@ -99,7 +99,7 @@
         <TextView android:layout_width="wrap_content"
                   android:text="@string/forget_password"
                   android:layout_gravity="center"
-                  android:textColor="@color/white"
+                  android:textColor="#ECEBEB"
                   android:visibility="gone"
                   android:fontFamily="@font/maven_pro"
                   android:layout_marginTop="10dp"
