--- a/app/src/main/res/layout/activity_suppor_detailt.xml
+++ b/app/src/main/res/layout/activity_suppor_detailt.xml
@@ -56,8 +56,20 @@
                    android:layout_height="wrap_content"/>
 
     </androidx.cardview.widget.CardView>
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_below="@id/toolbar"
+            android:layout_height="match_parent">
+
+
+    <RelativeLayout
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content">
+
+
     <ImageView android:layout_width="wrap_content"
-              android:layout_below="@id/toolbar"
+
                android:id="@+id/image"
               android:layout_centerHorizontal="true"
                android:src="@drawable/support"
@@ -65,6 +77,7 @@
               android:layout_height="200dp"/>
 
     <TextView android:layout_width="wrap_content"
+            android:id="@+id/text"
               android:layout_below="@id/image"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="10dp"
@@ -73,5 +86,16 @@
               android:textStyle="bold"
               android:fontFamily="@font/maven_pro"
               android:layout_height="wrap_content"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/content"
+            android:layout_below="@id/text"
+            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
 
+            android:layout_height="wrap_content">
+
+    </TextView>
+    </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
