--- a/app/src/main/res/layout/activity_top__review.xml
+++ b/app/src/main/res/layout/activity_top__review.xml
@@ -3,6 +3,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
+    android:background="#F1EEEE"
         android:layout_height="match_parent"
         tools:context=".view.activity.Top_ReviewActivity">
     <androidx.cardview.widget.CardView
@@ -66,7 +67,7 @@
             android:layout_height="wrap_content">
         <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_margin="10dp"
+                android:layout_margin="20dp"
                 app:cardCornerRadius="8dp"
                 android:layout_height="wrap_content">
             <LinearLayout android:layout_width="match_parent"
