--- a/app/src/main/res/layout/google_rewwar.xml
+++ b/app/src/main/res/layout/google_rewwar.xml
@@ -11,10 +11,11 @@
                 android:layout_width="match_parent"
                 android:id="@+id/layput"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:layout_height="wrap_content">
             <TextView
                     android:layout_width="wrap_content"
-                    android:text="Promotions"
+                    android:text="My Plan"
                     android:layout_marginStart="10dp"
                     android:textSize="15dp"
                     android:fontFamily="@font/quicksand_bold"
@@ -23,22 +24,43 @@
             </TextView>
             <TextView
                     android:layout_width="wrap_content"
-                    android:text="500"
-                    android:visibility="gone"
+                    android:text=""
+                    android:id="@+id/validaty_"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="10dp"
                     android:fontFamily="@font/maven_pro"
-                    android:textSize="18dp"
+                    android:textSize="15dp"
                     android:textColor="@color/Black"
                     android:layout_height="wrap_content">
 
             </TextView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text=""
+                android:id="@+id/active"
+                android:layout_below="@id/validaty_"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
+                android:fontFamily="@font/maven_pro"
+                android:textSize="13dp"
+                android:textColor="@color/successGreen"
+                android:layout_height="wrap_content">
+
+            </TextView>
         </RelativeLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:id="@+id/recyclerview_"
+            android:visibility="gone"
+            android:layout_below="@id/layput"
+            android:layout_height="wrap_content">
 
+        </androidx.recyclerview.widget.RecyclerView>
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_below="@id/layput"
+
+                android:visibility="gone"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
                 android:orientation="horizontal"
