--- a/app/src/main/res/layout/ly_sidebar.xml
+++ b/app/src/main/res/layout/ly_sidebar.xml
@@ -133,7 +133,7 @@
                     android:layout_marginStart="15dp"
                     android:layout_height="1dp"/>
             <LinearLayout
-                    android:id="@+id/cleanderview"
+                    android:id="@+id/taotal_lead"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_marginStart="10dp"
@@ -147,6 +147,7 @@
                     android:layout_height="25dp" />
                 <TextView
                     android:layout_width="wrap_content"
+
                     android:layout_height="match_parent"
                     android:layout_marginStart="10dp"
                     android:layout_weight="5"
@@ -214,7 +215,7 @@
                     android:layout_weight="5"
                     android:textColor="#fff"
                     android:gravity="center_vertical"
-                    android:text="Wallet"
+                    android:text="My Wallet"
                     android:fontFamily="@font/quicksand_bold"
                     android:layout_marginLeft="10dp"/>
 
@@ -226,7 +227,7 @@
                     android:layout_marginStart="15dp"
                     android:layout_height="1dp"/>
             <LinearLayout
-                    android:id="@+id/viewbill"
+                    android:id="@+id/subscription_plane_layout"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_marginStart="10dp"
@@ -245,7 +246,7 @@
                     android:layout_weight="5"
                     android:textColor="#fff"
                     android:gravity="center_vertical"
-                    android:text="Campaign"
+                    android:text="Subscription plan"
                     android:fontFamily="@font/quicksand_bold"
                     android:layout_marginLeft="10dp"/>
 
