--- a/app/src/main/res/layout/profilelayout.xml
+++ b/app/src/main/res/layout/profilelayout.xml
@@ -37,7 +37,7 @@
                 </ImageView>
 
                 <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/username"
+                        android:id="@+id/username_txt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -46,7 +46,7 @@
                         android:drawablePadding="9dp"
                         android:fontFamily="@font/quicksand_bold"
                         android:gravity="start"
-                        android:text="Rinku"
+                        android:text=""
                         android:textAlignment="textStart" />
 
             </RelativeLayout>
@@ -77,7 +77,7 @@
                 </ImageView>
 
                 <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/username"
+                        android:id="@+id/phone_txt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -86,7 +86,7 @@
                         android:drawablePadding="9dp"
                         android:fontFamily="@font/quicksand_bold"
                         android:gravity="start"
-                        android:text="+91-9756565"
+                        android:text=""
                         android:textAlignment="textStart" />
 
             </RelativeLayout>
@@ -117,7 +117,7 @@
                 </ImageView>
 
                 <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/username"
+                        android:id="@+id/email_txt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -126,7 +126,7 @@
                         android:drawablePadding="9dp"
                         android:fontFamily="@font/quicksand_bold"
                         android:gravity="start"
-                        android:text="rinku@gmail.com"
+                        android:text=""
                         android:textAlignment="textStart" />
 
             </RelativeLayout>
@@ -156,7 +156,7 @@
                 </ImageView>
 
                 <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/username"
+                        android:id="@+id/address_txt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -165,7 +165,7 @@
                         android:drawablePadding="9dp"
                         android:fontFamily="@font/quicksand_bold"
                         android:gravity="start"
-                        android:text="Alpha-1st,B-154"
+                        android:text=""
                         android:textAlignment="textStart" />
 
             </RelativeLayout>
@@ -196,7 +196,7 @@
                 </ImageView>
 
                 <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/username"
+                        android:id="@+id/city_txt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -205,7 +205,7 @@
                         android:drawablePadding="9dp"
                         android:fontFamily="@font/quicksand_bold"
                         android:gravity="start"
-                        android:text="greater noida"
+                        android:text=""
                         android:textAlignment="textStart" />
 
             </RelativeLayout>
@@ -282,7 +282,7 @@
                 </ImageView>
 
                 <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/username"
+                        android:id="@+id/pin_txt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -291,7 +291,7 @@
                         android:drawablePadding="9dp"
                         android:fontFamily="@font/quicksand_bold"
                         android:gravity="start"
-                        android:text="201310"
+                        android:text=""
                         android:textAlignment="textStart" />
 
             </RelativeLayout>
@@ -321,7 +321,7 @@
                 </ImageView>
 
                 <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/username"
+                        android:id="@+id/date_txt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -330,7 +330,7 @@
                         android:drawablePadding="9dp"
                         android:fontFamily="@font/quicksand_bold"
                         android:gravity="start"
-                        android:text="10-08-1998"
+                        android:text=""
                         android:textAlignment="textStart" />
 
             </RelativeLayout>
