--- a/app/src/main/res/layout/purchase_plane.xml
+++ b/app/src/main/res/layout/purchase_plane.xml
@@ -19,40 +19,61 @@
 
         <ImageView android:layout_width="70dp"
             android:id="@+id/imageview"
-            android:src="@drawable/ic_baseline_check_24"
+            android:src="@drawable/emptywallet"
             android:layout_gravity="center"
+            android:visibility="gone"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="10dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="10dp" />
+            android:layout_height="70dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp" />
         <TextView android:id="@+id/txtvw"
             android:layout_width="wrap_content"
             android:layout_below="@id/imageview"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="#7A7979"
+            android:layout_marginTop="15dp"
             android:layout_centerHorizontal="true"
             android:text=""
-            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/maven_pro_medium"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="5dp"
             android:textStyle="bold"
-            android:textSize="15dp" />
+            android:textSize="18dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="5dp" />
         <TextView android:id="@+id/txtvw2"
             android:layout_width="wrap_content"
-
             android:layout_below="@id/txtvw"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textColor="#7A7979"
-            android:visibility="gone"
             android:layout_centerHorizontal="true"
             android:text="Please recharge your wallet"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginStart="5dp"
             android:textStyle="bold"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="5dp" />
+        <Button
+            android:layout_width="wrap_content"
+            android:id="@+id/add_money_wallet_"
+            android:layout_below="@id/txtvw2"
+            android:layout_centerHorizontal="true"
+            android:text="Buy plan"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="12dp"
+            android:textColor="#fff"
+            android:fontFamily="@font/maven_pro_medium"
+            android:background="@drawable/add_wallet_background"
+            android:layout_height="30dp">
+
+        </Button>
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
