--- a/app/src/main/res/layout/wallet_details.xml
+++ b/app/src/main/res/layout/wallet_details.xml
@@ -6,11 +6,13 @@
         android:layout_height="wrap_content">
     <RelativeLayout
             android:layout_width="match_parent"
+        android:layout_gravity="center"
             android:layout_height="wrap_content">
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:id="@+id/layput"
-                android:layout_marginTop="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="10dp"
                 android:layout_height="wrap_content">
             <TextView
                     android:layout_width="wrap_content"
@@ -24,17 +26,33 @@
 
             </TextView>
             <TextView
-                    android:layout_width="wrap_content"
-                    android:text="₹500"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="10dp"
-                    android:fontFamily="@font/quicksand_bold"
-                    android:textSize="15dp"
-                    android:textColor="@color/Black"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_alignParentRight="true">
+            android:layout_width="wrap_content"
+            android:id="@+id/wallet_money"
+            android:text=""
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="@font/quicksand_bold"
+            android:textSize="15dp"
+            android:textColor="@color/Black"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentRight="true">
+            </TextView>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:id="@+id/active_status"
+                android:text="Active"
+                android:visibility="gone"
+                android:layout_below="@id/wallet_money"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
+                android:fontFamily="@font/quicksand_bold"
+                android:textSize="12dp"
+                android:textColor="@color/successGreen"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_alignParentRight="true">
             </TextView>
         </RelativeLayout>
 
@@ -52,6 +70,7 @@
                 android:layout_width="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1"
+            android:visibility="gone"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center"
                 android:gravity="center"
@@ -80,6 +99,7 @@
                 android:layout_width="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1"
+            android:visibility="gone"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center"
                 android:gravity="center"
@@ -106,8 +126,9 @@
         </LinearLayout>
         <LinearLayout
                 android:layout_width="wrap_content"
+                android:id="@+id/add_money_wallet"
+            android:visibility="gone"
                 android:orientation="vertical"
-                android:layout_weight="1"
                 android:layout_marginStart="10dp"
                 android:layout_gravity="center"
                 android:gravity="center"
